2016-04-29  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r200232.
        https://bugs.webkit.org/show_bug.cgi?id=157189

        This change broke the Mac CMake build and its LayoutTest is
        failing and/or flaky on all platforms (Requested by ryanhaddad
        on #webkit).

        Reverted changeset:

        "Move ResourceTiming behind a runtime flag"
        https://bugs.webkit.org/show_bug.cgi?id=157133
        http://trac.webkit.org/changeset/200232

2016-04-29  Miguel Gomez  <magomez@igalia.com>

        [GTK] Unreviewed gardening: update expectations after r200234
        https://bugs.webkit.org/show_bug.cgi?id=157181

        Unreviewed gardening.

        * platform/gtk/TestExpectations:

2016-04-29  Simon Fraser  <simon.fraser@apple.com>

        Wheel Event Not Fired For `body,html { height:100% }`
        https://bugs.webkit.org/show_bug.cgi?id=148450

        Reviewed by Brent Fulgham.
        
        Testcase, skipped on iOS which doesn't support wheel events.

        * fast/events/wheel-event-outside-body-expected.txt: Added.
        * fast/events/wheel-event-outside-body.html: Added.
        * platform/ios-simulator/TestExpectations:

2016-04-29  Chris Dumez  <cdumez@apple.com>

        [Web IDL] Specify default values for optional parameters of wrapper types
        https://bugs.webkit.org/show_bug.cgi?id=157161

        Reviewed by Darin Adler.

        Rebaseline as a different exception message is now given when calling
        Selection.extend() without enough parameters.

        * editing/selection/extend-expected.txt:

2016-04-29  Joanmarie Diggs  <jdiggs@igalia.com>

        [ATK] Expose the value of aria-roledescription via an AtkObject attribute
        https://bugs.webkit.org/show_bug.cgi?id=146719

        Reviewed by Chris Fleizach.

        Platform-specific expectations are needed because falling back on the default