@@ -1,3 +1,15 @@
+2016-04-29  Ryosuke Niwa  <rniwa@webkit.org>
+
+        test harness tests complain about testRunner not being declared inside a browser
+        https://bugs.webkit.org/show_bug.cgi?id=157056
+
+        Reviewed by Alex Christensen.
+
+        Don't run the code meant to re-format results for DRT/WTR when testRunner is not defined (i.e. inside a browser).
+        Also fixed various styling issues with this JavaScript file and removed useless comments.
+
+        * resources/testharnessreport.js:
+
 2016-04-29  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r200232.
